# kiwi-tcms-testcase-browser-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
tcms_test_browser/: __init__.py  apps.py  menu.py  urls.py  views.py
tcms_test_browser/static/tcms_test_browser/css/: browser.css
tcms_test_browser/static/tcms_test_browser/js/: browser.js  consolidated.js  plan_browser.js  run_browser.js
tcms_test_browser/templates/tcms_test_browser/: browser.html  consolidated.html  plan_browser.html  run_browser.html
