[project]
name = "tcms-test-browser"
version = "0.2.0"
description = "Test Case, Test Plan, and Test Run Browser plugin for Kiwi TCMS with tree navigation, statistics dashboards, and report exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distlib==0.4.0",
    "filelock==3.20.3",
    "openpyxl>=3.1.5",
    "platformdirs==4.5.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "virtualenv==20.36.1",
]
