[metadata]
name = tcms-test-browser
version = 0.1.0
author = Kiwi TCMS
description = Test Case Browser plugin for Kiwi TCMS with tree navigation
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.8
packages =
    tcms_test_browser
include_package_data = True
install_requires =
    openpyxl
    python-docx
    reportlab

[options.entry_points]
kiwitcms.plugins =
    tcms_test_browser = tcms_test_browser
